# spotify_audio_dashboard

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  display.rs  main.rs  types.rs  user.rs
src/analytics/: mod.rs
src/models/: artist.rs
src/request/: mod.rs
